--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,31 +9,27 @@
   	<!-- Including Font Awesome Icons -->
   	<script src="https://use.fontawesome.com/b38c8ed4c7.js"></script>
 
-	<!-- Link to reset stylesheet -->
-	<link rel="stylesheet" href="css/reset.css">
-
 	<!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 	<!-- Compiled and minified Materialize CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
 	<!-- Compiled and minified Materialize JavaScript -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-          
-	<link rel="stylesheet" href="css/style.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
 </head>
 
 <body>
 	<header>
 		<nav>
-			<div class="nav-wrapper pink accent-2">
+			<div class="nav-wrapper teal">
 				<i class="fa fa-address-book-o fa-5x" aria-hidden="true" id=logo-icon></i>
 				<a href="/" class="brand-logo" id="logo">Friend Finder</a>
 				<ul class="right hide-on-med-and-down" id="head-nav-links">
 					<li><a href="/survey">Survey</a></li>
 					<li><a href="/api/friends">API Friends List</a></li>
-					<li><a href="https://github.com/angrbrd/friend-finder">GitHub Repo</a></li>
+					<li><a href="https://github.com/jliscar6591/Friend-Finder">GitHub Repo</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -198,32 +194,34 @@
 								<i class="material-icons right">send</i>
 							</button>
 						</div>
+						<div class="row">
+							<!-- space -->
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</main>
 
-	<footer class="page-footer pink accent-2">
+	<footer class="page-footer white">
 		<div class="container">
 			<div class="row">
 				<div class="col l6 s12">
-					<h5 class="white-text">Friend Finder App</h5>
-					<p class="grey-text text-lighten-4">Thank you for taking the brief survey. Your responses will be used for training purposes only :-].</p>
+					<ul>
+						<li><a class="teal-text text-lighten-1" href="/api/friends">API Friends List</a></li>
+						<li><a class="teal-text text-lighten-1" href="https://github.com/jliscar6591/Friend-Finder">GitHub Repo</a></li>
+					</ul>
 				</div>
 				<div class="col l4 offset-l2 s12">
 					<h5 class="white-text">Links</h5>
-					<ul>
-						<li><a class="grey-text text-lighten-3" href="/api/friends">API Friends List</a></li>
-						<li><a class="grey-text text-lighten-3" href="https://github.com/angrbrd/friend-finder">GitHub Repo</a></li>
-					</ul>
+					
 				</div>
 			</div>
 		</div>
 		<div class="footer-copyright">
-			<div class="container">
-				© 2017 angrbrd entertainment
-				<a class="grey-text text-lighten-4 right" href="https://github.com/angrbrd">Reference Work</a>
+			<div class="container teal-text ">
+				© 2018 John L
+				<a class="teal-text right" href="https://github.com/jliscar6591">Reference Work</a>
 			</div>
 		</div>
 	</footer>
