--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -60,7 +60,7 @@
 						<!-- Survey Questions -->
 						<div class="input-field col s12">
 							<h3>Question 1</h3>
-							<h5>Your mind is always buzzing with unexplored ideas and plans.</h5>
+							<h5>You are always coming up with new ideas and plans.</h5>
 							<select id="question1">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
@@ -86,7 +86,7 @@
 
 						<div class="input-field col s12">
 							<h3>Question 3</h3>
-							<h5>You find it easy to stay relaxed and focused even when there is some pressure.</h5>
+							<h5>You remain calm under pressure.</h5>
 							<select id="question3">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
@@ -99,7 +99,7 @@
 
 						<div class="input-field col s12">
 							<h3>Question 4</h3>
-							<h5>You rarely do something just out of sheer curiosity.</h5>
+							<h5>You are not spontaneous.</h5>
 							<select id="question4">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
@@ -112,7 +112,7 @@
 
 						<div class="input-field col s12">
 							<h3>Question 5</h3>
-							<h5>People can rarely upset you.</h5>
+							<h5>You don't get upset easy.</h5>
 							<select id="question5">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
@@ -151,7 +151,7 @@
 
 						<div class="input-field col s12">
 							<h3>Question 8</h3>
-							<h5>You rarely get carried away by fantasies and ideas.</h5>
+							<h5>You do not get carried away by fantasies and ideas.</h5>
 							<select id="question8">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
@@ -164,7 +164,7 @@
 
 						<div class="input-field col s12">
 							<h3>Question 9</h3>
-							<h5>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</h5>
+							<h5>You think that everyone’s views should be respected regardless of factual support.</h5>
 							<select id="question9">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
